Prevent leaderboard avatars from shifting too much
What:

1) Title. They still shift though. It's on switching from dark mode to
light.
2) Drive-by styling of NavigationDrawer and _info_list

--- a/client/src/components/info-list/_info_list.scss
+++ b/client/src/components/info-list/_info_list.scss
@@ -8,6 +8,14 @@
     margin: 4vh 2vw;
     padding: 2vw 3vw;
 
+    &:first-child {
+      margin-top: 2vh;
+    }
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+
     h2 {
       width: 100%;
       font-size: 7vw;
