--- a/client/src/components/leaderboard_list_item/_leaderboard_list_item.scss
+++ b/client/src/components/leaderboard_list_item/_leaderboard_list_item.scss
@@ -10,7 +10,7 @@
       margin-top: 0;
     }
 
-    .user-info {
+    .row.user-info {
       padding: 2vh 0 0 0;
       display: flex;
       justify-content: space-between;
@@ -29,7 +29,7 @@
       .user-info__img-container {
         @include center-content;
         @include light-unpressed;
-        margin: 0 7vw 0 0;
+        margin: 0 5vw 0 0;
         border-radius: 50%;
         height: 15vw;
         width: 15vw;
@@ -70,17 +70,69 @@
     width: 100%;
   }
 
-  &--dark {
+  &.leaderboard-container--dark {
     .v-card.leaderboard__list-item {
       @include dark-unpressed;
-      .user-info {
+      @include center-content;
+      flex-direction: column;
+      width: 100%;
+      margin: 4vh 0;
+
+      &:first-child {
+        margin-top: 0;
+      }
+
+      .row.row.user-info {
+        padding: 2vh 0 0 0;
+        display: flex;
+        justify-content: space-between;
+
+        h3.user-info__name {
+          margin-left: 17vw;
+          font-size: 5vw;
+        }
+
+        span.user-info__rank {
+          position: absolute;
+          left: 5vw;
+          top: 3vw;
+        }
+
         .user-info__img-container {
+          @include center-content;
           @include dark-unpressed;
+          margin: 0 5vw 0 0;
+          border-radius: 50%;
+          height: 15vw;
+          width: 15vw;
+
+          img {
+            position: absolute;
+            height: 13vw;
+            width: 13vw;
+            border-radius: 50%;
+          }
         }
       }
+
       .performance-info {
+        justify-content: space-around;
+        margin: 2vw;
+        font-size: 3vh;
+
         > * {
           @include dark-pressed;
+          padding: 1vh 3vw;
+          border-radius: 3vw;
+        }
+
+        &__percent {
+          margin-left: 15vw;
+          font-weight: bold;
+        }
+
+        &__value {
+          margin-right: 15vw;
         }
       }
     }
