--- a/client/src/views/_leaderboard.scss
+++ b/client/src/views/_leaderboard.scss
@@ -30,7 +30,7 @@
     background-color: inherit;
   }
 
-  &--dark {
+  &.leaderboard-container--dark {
     h2 {
       margin: 4vw 0 1vw 5vw;
       align-self: flex-start;
